Added Reputation Checker Page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,14 @@ vaadin.launch-browser=true
 spring.jpa.hibernate.ddl-auto = update
 
 # Production will use environment variables
-spring.datasource.url=jdbc:postgresql://dpg-d0u8k3adbo4c73amg600-a.frankfurt-postgres.render.com:5432/database_u620?sslmode=require
-spring.datasource.username=database_u620_user
-spring.datasource.password=YR88UAc9AtaOO3dZILHNafthhTpUeyzs
+#spring.datasource.url=jdbc:postgresql://dpg-d0u8k3adbo4c73amg600-a.frankfurt-postgres.render.com:5432/database_u620?sslmode=require
+#spring.datasource.username=database_u620_user
+#spring.datasource.password=YR88UAc9AtaOO3dZILHNafthhTpUeyzs
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:postgresql://dpg-d1mrqibuibrs73e0c360-a.frankfurt-postgres.render.com:5432/test_kf7d?sslmode=require
+spring.datasource.username=testuser
+spring.datasource.password=AjutTeh4bYYbsjY53o4toKOnSXUgbk81
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
