--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,6 @@ spring.web.resources.chain.cache=false
 cloudinary.cloud-name=drtlnc2tx
 cloudinary.api-key=216334144127352
 cloudinary.api-secret=BPbJU1YyTwhhWRgj-4FHvHw8cCs
+
+admin.username = admin
+admin.password = admin@1
