--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,15 @@ vaadin.launch-browser=true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto = update
 
-#spring.datasource.url = jdbc:mysql://localhost:3306/cis?allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=Excellence77!
+spring.datasource.url = jdbc:mysql://localhost:3306/cis?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Excellence77!
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto = update
 
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto = update
-
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto = update
 
 # Production will use environment variables
 #spring.datasource.url=jdbc:postgresql://dpg-d0u8k3adbo4c73amg600-a.frankfurt-postgres.render.com:5432/database_u620?sslmode=require
@@ -23,13 +23,13 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.datasource.password=YR88UAc9AtaOO3dZILHNafthhTpUeyzs
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:postgresql://dpg-d1mrqibuibrs73e0c360-a.frankfurt-postgres.render.com:5432/test_kf7d?sslmode=require
-spring.datasource.username=testuser
-spring.datasource.password=AjutTeh4bYYbsjY53o4toKOnSXUgbk81
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://dpg-d1mrqibuibrs73e0c360-a.frankfurt-postgres.render.com:5432/test_kf7d?sslmode=require
+#spring.datasource.username=testuser
+#spring.datasource.password=AjutTeh4bYYbsjY53o4toKOnSXUgbk81
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 spring.web.resources.cache.period=0
 spring.web.resources.chain.cache=false
