--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ vaadin.launch-browser=true
 #spring.datasource.url=jdbc:postgresql://dpg-d1mrqibuibrs73e0c360-a.frankfurt-postgres.render.com:5432/test_kf7d?sslmode=require
 #spring.datasource.username=testuser
 #spring.datasource.password=AjutTeh4bYYbsjY53o4toKOnSXUgbk81
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
