--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,9 +23,9 @@ vaadin.launch-browser=true
 #spring.datasource.password=YR88UAc9AtaOO3dZILHNafthhTpUeyzs
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.datasource.url=jdbc:postgresql://db.caziglygecyhevpaatap.supabase.co:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=Excellence77!
+spring.datasource.url=jdbc:postgresql://db.caziglygecyhevpaatap.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Excellence77!
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.jpa.show-sql=true
