--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ cloudinary.api-key=216334144127352
 cloudinary.api-secret=BPbJU1YyTwhhWRgj-4FHvHw8cCs
 
 # Allow specific origin
-spring.web.cors.allowed-origins=http://localhost:5050
+spring.web.cors.allowed-origins=http://localhost:5050, https://cis.hostless.app
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
